mysql/app/nginx/nginx/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      env: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
#  minReadySeconds: 5
  template:
    metadata:
      name: nginx
      labels:
        env: nginx
    spec:
      containers:
      - name: nginx
        image: httpd
        ports:
        - containerPort: 80
